force-app/main/default/src/objects/Case/Case.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>