force-app/main/default/src/objects/Case/fields/Account_Birth_Date_MVN__c.field-meta.xml
<CustomField>
    <fullName>Account_Birth_Date_MVN__c</fullName>
    <description>Birth date of the associated account.</description>
    <formula>Account.PersonContact.Birth_Date_MVN__c</formula>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>