force-app/main/default/src/objects/Case/fields/Account_Primary_Email_MVN__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Email_MVN__c</fullName>
    <description>Pulls the Primary email down to the case.</description>
    <formula>Account.PJN_Primary_Email__r.PJN_Email__c</formula>
    <inlineHelpText>Pulls the Primary email down to the case.</inlineHelpText>
    <label>Account Primary Email</label>
    <type>Text</type>
</CustomField>