force-app/main/default/src/objects/Case/fields/Account_Primary_Zip_MVN__c.field-meta.xml
<CustomField>
    <fullName>Account_Primary_Zip_MVN__c</fullName>
    <description>Account primary address&apos;s postal code</description>
    <formula>Account.PJN_Primary_Address__r.PJN_Postal_Code__c</formula>
    <label>Account Primary ZIP</label>
    <type>Text</type>
</CustomField>