force-app/main/default/src/objects/Case/fields/Care_Plan_Template_Ext_ID_Override_MVN__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Template_Ext_ID_Override_MVN__c</fullName>
    <description>Allows for explicitly setting the external id of the care plan template which should be applied on insert.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Plan Template External ID Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>