force-app/main/default/src/objects/Case/fields/Converted_Lead_ID_MVN__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_ID_MVN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Converted Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>