force-app/main/default/src/objects/Case/fields/Converted_Lead_MVN__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_MVN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original consumer record whose conversion created this case.</description>
    <label>Converted Consumer</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>