force-app/main/default/src/objects/Case/fields/Converted_Qualified_Participant_MVN__c.field-meta.xml
<CustomField>
    <fullName>Converted_Qualified_Participant_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the participant has changed from unqualified to qualified. Set by flow.</description>
    <label>Converted Qualified Participant</label>
    <type>Checkbox</type>
</CustomField>