force-app/main/default/src/objects/Case/fields/Diagnosis_MVN__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_MVN__c</fullName>
    <description>The diagnosis for the participant, if relevant.</description>
    <label>Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCC</fullName>
            </value>
            <value>
                <fullName>CSCC</fullName>
            </value>
            <value>
                <fullName>NSCLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>