force-app/main/default/src/objects/Case/fields/Email_Opt_In_MVN__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_MVN__c</fullName>
    <description>Indicates if the participant opted into email during enrollment. Used to determine the proper care plan template to apply.</description>
    <label>Email Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_MVN</valueSetName>
    </valueSet>
</CustomField>