force-app/main/default/src/objects/Case/fields/Has_Program_Consent_MVN__c.field-meta.xml
<CustomField>
    <fullName>Has_Program_Consent_MVN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by a flow when the corresponding consent record for the program is created/edited with program consent.</description>
    <label>Has Program Consent</label>
    <type>Checkbox</type>
</CustomField>