force-app/main/default/src/objects/Case/fields/HealthCloudGA__DueDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DueDate__c</fullName>
    <description>Date by when this care gap should be closed.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date by when this care gap should be closed.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>