force-app/main/default/src/objects/Case/fields/HealthCloudGA__SourceAgency__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SourceAgency__c</fullName>
    <description>Agency that identified the care gap.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency that identified the care gap.</inlineHelpText>
    <label>Source Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>