force-app/main/default/src/objects/Case/fields/HealthCloudGA__SourceSystemModified__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
    <description>When last updated.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When last updated.</inlineHelpText>
    <label>Source System Modified</label>
    <type>DateTime</type>
</CustomField>