force-app/main/default/src/objects/Case/fields/MVN_Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>MVN_Birth_Year__c</fullName>
    <formula>TEXT(YEAR(Account.MVN_Birthdate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Year</label>
    <type>Text</type>
</CustomField>