force-app/main/default/src/objects/Case/fields/MVN_Callback_Phone__c.field-meta.xml
<CustomField>
    <fullName>MVN_Callback_Phone__c</fullName>
    <description>Phone number used to call back the customer. Set by CTI and visible to CTI users.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Callback Phone</label>
    <type>Phone</type>
</CustomField>