force-app/main/default/src/objects/Case/fields/MVN_Care_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Care_Plan_Id__c</fullName>
    <description>Unique identifier for the Care Plan. Displays a Care Plan Legacy Id if one is available or the Salesforce Id if there is no Legacy Id.</description>
    <formula>IF(ISBLANK(MVN_Care_Plan_Legacy_Id__c), CaseNumber, MVN_Care_Plan_Legacy_Id__c)</formula>
    <label>Care Plan Id</label>
    <type>Text</type>
</CustomField>