force-app/main/default/src/objects/Case/fields/MVN_Care_Plan_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_Care_Plan_Legacy_Id__c</fullName>
    <description>Stores a unique identifier for the care plan from a legacy hub system.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Care Plan Legacy Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>