force-app/main/default/src/objects/Case/fields/MVN_Case_RBM_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>MVN_Case_RBM_Director_Email__c</fullName>
    <description>For email alerts in the flow &quot;Send Email to RBM and MS Sales&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RBM Director Email</label>
    <type>Email</type>
</CustomField>