force-app/main/default/src/objects/Case/fields/MVN_Case_RD_Email__c.field-meta.xml
<CustomField>
    <fullName>MVN_Case_RD_Email__c</fullName>
    <description>Regional Director Email - for email alerts in the flow &quot;Send Email to RBM and MS Sales&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RD Email</label>
    <type>Email</type>
</CustomField>