force-app/main/default/src/objects/Case/fields/MVN_Case_RD_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Case_RD_Name__c</fullName>
    <description>Regional Director Name - for email alerts in the flow &quot;Send Email to RBM and MS Sales&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RD Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>