force-app/main/default/src/objects/Case/fields/MVN_Clinical_Trial_Patient_Study_ID__c.field-meta.xml
<CustomField>
    <fullName>MVN_Clinical_Trial_Patient_Study_ID__c</fullName>
    <description>Study Id for the clinical trial the patient participated in.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Clinical Trial Patient Study ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>