force-app/main/default/src/objects/Case/fields/MVN_Clinical_Trial_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Clinical_Trial_Site_Name__c</fullName>
    <description>Name of the clinical trial site where the patient received treatment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Clinical Trial Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>