force-app/main/default/src/objects/Case/fields/MVN_Clinical_Trial_Transition_Patient__c.field-meta.xml
<CustomField>
    <fullName>MVN_Clinical_Trial_Transition_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical Trial Transition Patient</label>
    <type>Checkbox</type>
</CustomField>