force-app/main/default/src/objects/Case/fields/MVN_Confirm_Treatment_Sent__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirm_Treatment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine which Activity the Confirm Treatment message was sent from.</description>
    <label>Confirm Treatment Sent</label>
    <type>Checkbox</type>
</CustomField>