force-app/main/default/src/objects/Case/fields/MVN_Confirmed_Acquisition_Channel__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirmed_Acquisition_Channel__c</fullName>
    <description>Specifies the confirmed acquisition channel for a patient&apos;s treatment.</description>
    <label>Confirmed Acquisition Channel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MVN_Confirmed_Treatment_Setting__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specialty Pharmacy</fullName>
            </value>
            <value>
                <fullName>Buy and Bill</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
                <isActive>false</isActive>
                <label>Undecided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>