force-app/main/default/src/objects/Case/fields/MVN_Confirmed_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirmed_Appt_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed Appointment Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>