force-app/main/default/src/objects/Case/fields/MVN_Confirmed_Clinical_Setting__c.field-meta.xml
<CustomField>
    <fullName>MVN_Confirmed_Clinical_Setting__c</fullName>
    <description>Specifies the confirmed clinical setting for a patient&apos;s treatment.</description>
    <label>Confirmed Clinical Setting</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MVN_Confirmed_Treatment_Setting__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Office</fullName>
            </value>
            <value>
                <fullName>Infusion Center</fullName>
            </value>
            <value>
                <fullName>Hospital System SP</fullName>
                <label>Hospital System</label>
            </value>
            <value>
                <fullName>Undecided</fullName>
                <isActive>false</isActive>
                <label>Undecided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>