force-app/main/default/src/objects/Case/fields/MVN_Connect_Contact_Attributes__c.field-meta.xml
<CustomField>
    <fullName>MVN_Connect_Contact_Attributes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Connect Contact Attributes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>