force-app/main/default/src/objects/Case/fields/MVN_Consumer__c.field-meta.xml
<CustomField>
    <fullName>MVN_Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Consumer account on a Request.</description>
    <label>Consumer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>MVN_Consumer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Consumer)</relationshipLabel>
    <relationshipName>MVN_Cases_Consumer</relationshipName>
    <type>Lookup</type>
</CustomField>