force-app/main/default/src/objects/Case/fields/MVN_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>myRARE team member focused on all aspects of benefits investigation, verification, and support related to pharmacy, medical, and buy/bill claims.</description>
    <label>Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>