force-app/main/default/src/objects/Case/fields/MVN_Coordinator_Amazon_Connect_Username__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coordinator_Amazon_Connect_Username__c</fullName>
    <description>Holds the value of the Coordinator as a username formatted to match against agents in Amazon Connect. Set by automated process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coordinator Amazon Connect Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>