force-app/main/default/src/objects/Case/fields/MVN_Copay_Assistance_Program__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Assistance_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Copay Assistance Program</label>
    <referenceTo>PJN_Assistance_Program__c</referenceTo>
    <relationshipLabel>Cases (Copay Assistance Program)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>