force-app/main/default/src/objects/Case/fields/MVN_Copay_BIN__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_BIN__c</fullName>
    <description>Used to store the Copay BIN from the related Assistance Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay BIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>