force-app/main/default/src/objects/Case/fields/MVN_Copay_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Group_Number__c</fullName>
    <description>Used to store the Copay Group Number from the related Assistance Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Group #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>