force-app/main/default/src/objects/Case/fields/MVN_Copay_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Member_ID__c</fullName>
    <description>Used to store the Copay Member Id from the related Assistance Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay Member ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>