force-app/main/default/src/objects/Case/fields/MVN_Copay_Patient__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_Patient__c</fullName>
    <description>Displays the value of Copay is Active from the Copay Assistance Program record. Used to display value to RBM users</description>
    <formula>MVN_Copay_Assistance_Program__r.MVN_Copay_Is_Active__c</formula>
    <label>Copay Patient</label>
    <type>Checkbox</type>
</CustomField>