force-app/main/default/src/objects/Case/fields/MVN_Copay_PCN__c.field-meta.xml
<CustomField>
    <fullName>MVN_Copay_PCN__c</fullName>
    <description>Used to store the Copay PCN from the related Assistance Program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Copay PCN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>