force-app/main/default/src/objects/Case/fields/MVN_Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coverage_Status__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(PJN_Active_Coverage_Investigation__r.PJN_Outcome__c))),
TEXT(PJN_Active_Coverage_Investigation__r.PJN_Outcome__c)
&amp;
IF(NOT(ISBLANK(TEXT(PJN_Active_Coverage_Investigation__r.PJN_Access_Type__c))), &quot; - &quot; &amp; TEXT(PJN_Active_Coverage_Investigation__r.PJN_Access_Type__c), NULL),
&quot;Unknown&quot;)</formula>
    <label>Coverage Status</label>
    <type>Text</type>
</CustomField>