force-app/main/default/src/objects/Case/fields/MVN_Days_in_Pharmacy_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Days_in_Pharmacy_Status__c</fullName>
    <description>The number of days elapsed since the last change in Pharmacy Status.</description>
    <formula>NOW() -  MVN_Last_Pharmacy_Status_Update__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Pharmacy Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>