force-app/main/default/src/objects/Case/fields/MVN_Days_Since_Last_SD_SP_Therapy_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Days_Since_Last_SD_SP_Therapy_Status__c</fullName>
    <formula>TODAY()-DATEVALUE( MVN_Last_SD_SP_Therapy_Status_Update__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last SD/SP Therapy Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>