force-app/main/default/src/objects/Case/fields/MVN_Default_Fax__c.field-meta.xml
<CustomField>
    <fullName>MVN_Default_Fax__c</fullName>
    <description>Unformatted primary fax number for the physician on the care plan. Used as a default value when sending faxes.</description>
    <formula>IF(
   ISBLANK( ParentId ),
      (SUBSTITUTE ( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( PJN_Physician__r.PJN_Primary_Fax__r.PJN_Fax__c , &quot; &quot;, &quot;&quot;) , &quot;-&quot;, &quot;&quot;) , &quot;)&quot;, &quot;&quot;) , &quot;(&quot;, &quot;&quot;)),
   (SUBSTITUTE ( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( Parent.PJN_Physician__r.PJN_Primary_Fax__r.PJN_Fax__c , &quot; &quot;, &quot;&quot;) , &quot;-&quot;, &quot;&quot;) , &quot;)&quot;, &quot;&quot;) , &quot;(&quot;, &quot;&quot;))
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Fax</label>
    <type>Text</type>
</CustomField>