force-app/main/default/src/objects/Case/fields/MVN_Delay_Outreach_Until_HCP__c.field-meta.xml
<CustomField>
    <fullName>MVN_Delay_Outreach_Until_HCP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if HCP confirmation is required before patient outreach as indicated on the start form.</description>
    <inlineHelpText>Check this box if you prefer myRARE delay patient outreach until you confirm patient outreach may be initiated</inlineHelpText>
    <label>Delay Outreach Until HCP Confirmation</label>
    <type>Checkbox</type>
</CustomField>