force-app/main/default/src/objects/Case/fields/MVN_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Document_Type__c</fullName>
    <description>Specifies the type of document(s) related to the request.</description>
    <label>Document Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appeal Approval Letter</fullName>
            </value>
            <value>
                <fullName>Appeal Denial Letter</fullName>
            </value>
            <value>
                <fullName>Appeal Form</fullName>
            </value>
            <value>
                <fullName>Appeal Letter</fullName>
            </value>
            <value>
                <fullName>Claim Information</fullName>
            </value>
            <value>
                <fullName>Clinical Documents</fullName>
            </value>
            <value>
                <fullName>Consent Form</fullName>
            </value>
            <value>
                <fullName>Financial Documents</fullName>
            </value>
            <value>
                <fullName>Insurance Cards</fullName>
            </value>
            <value>
                <fullName>Insurance Information</fullName>
            </value>
            <value>
                <fullName>Letter of Medical Necessity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PA Approval Letter</fullName>
            </value>
            <value>
                <fullName>PA Denial Letter</fullName>
            </value>
            <value>
                <fullName>PA Form</fullName>
            </value>
            <value>
                <fullName>PAP Appeal Documents</fullName>
            </value>
            <value>
                <fullName>Patient Authorization</fullName>
            </value>
            <value>
                <fullName>Product Request Form</fullName>
            </value>
            <value>
                <fullName>Rx</fullName>
            </value>
            <value>
                <fullName>Start Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>