force-app/main/default/src/objects/Case/fields/MVN_Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>MVN_Elapsed_Time__c</fullName>
    <label>MVN Elapsed Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>