force-app/main/default/src/objects/Case/fields/MVN_First_Scheduled_Treatment__c.field-meta.xml
<CustomField>
    <fullName>MVN_First_Scheduled_Treatment__c</fullName>
    <description>First Scheduled Treatment Date from Lead
Created by Mavens CLM 9-19-2022</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Scheduled Treatment</label>
    <type>Date</type>
</CustomField>