force-app/main/default/src/objects/Case/fields/MVN_General_Inquiry_Topic__c.field-meta.xml
<CustomField>
    <fullName>MVN_General_Inquiry_Topic__c</fullName>
    <description>Specifies the type of general request when not related to a particular patient&apos;s treatment.</description>
    <label>General Inquiry Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor Inquiry</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Locate HCP</fullName>
            </value>
            <value>
                <fullName>Other HCP</fullName>
            </value>
            <value>
                <fullName>Other Non-HCP</fullName>
            </value>
            <value>
                <fullName>Other Patient</fullName>
            </value>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Sales Rep Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>