force-app/main/default/src/objects/Case/fields/MVN_HIPAA_Consent__c.field-meta.xml
<CustomField>
    <fullName>MVN_HIPAA_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HIPAA Consent</label>
    <referenceTo>PJN_Contact_Point_Type_Consent__c</referenceTo>
    <relationshipLabel>Cases (HIPAA Consent)</relationshipLabel>
    <relationshipName>HIPAA_Consent_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>